css/admin-styles.css
/* 
    Document   : admin-styles
    Created on : Jan 19, 2012, 11:33:28 PM
    Author     : Cameron
    Description:
        Purpose of the stylesheet follows.
*/

root { 
    display: block;
}
.satsection-header {
    height: 24px;
    color: #666;
    padding: 10px;
    cursor: pointer;
    font-size: 19px;
    line-height: 24px;
    position: relative;
    background: white;
    margin: 30px 0 30px 0;
    vertical-align: middle;
    font-family: 'Georgia',serif;
    border: 1px solid #CCC;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    -moz-user-select: none;
    -webkit-user-select: none;
    user-select: none;
    border-image: initial;
}
.togbox {
    padding: 0;
    width: 22px;
    height: 22px;
    color: #CCC;
    font-size: 22px;
    line-height: 22px;
    font-weight: bold;
    text-align: center;
    margin: 0 10px 0 0;
    background: #666;
    text-decoration: none;
    font-family: monospace;
    vertical-align: text-top;
    border: 1px solid transparent;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    display: inline-block;
    zoom: 1 !ie<8;
    display: inline !ie<8;
    margin-top: 0 !ie<8;
    border-image: initial;
    cursor:pointer;
}

#poststuff h3 {
    padding: 12px;
    font-size:1.6em;
}

#misc-publishing-actions.preminfo {
    padding: 2px 15px;
}

